[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnigent-slack"
version = "0.1.0"
description = "Slack Socket Mode bot that drives Omnigent sessions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "aiohttp>=3.12.0",
    "cryptography>=42.0.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.0",
    "slack-bolt>=1.29.0",
    "slack-sdk>=3.43.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/omnigent_slack"]
